--- a/HQ Solver/Base.lproj/Main.storyboard
+++ b/HQ Solver/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13196"/>
+        <plugIn identifier="com.apple.WebKit2IBPlugin" version="13196"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -702,6 +703,82 @@
             </objects>
             <point key="canvasLocation" x="75" y="250"/>
         </scene>
+        <!--Window Controller-->
+        <scene sceneID="r8s-GX-nQZ">
+            <objects>
+                <windowController storyboardIdentifier="WebViewController" id="EOP-gL-iKL" sceneMemberID="viewController">
+                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="Jgh-4w-NKq">
+                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
+                        <rect key="contentRect" x="1734" y="62" width="480" height="270"/>
+                        <rect key="screenRect" x="1440" y="-300" width="1920" height="1177"/>
+                        <connections>
+                            <outlet property="delegate" destination="EOP-gL-iKL" id="dRN-sK-IuG"/>
+                        </connections>
+                    </window>
+                    <connections>
+                        <segue destination="NLv-is-8P1" kind="relationship" relationship="window.shadowedContentViewController" id="qk3-Id-rQy"/>
+                    </connections>
+                </windowController>
+                <customObject id="CD1-he-NTw" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="656" y="214"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="YNS-2f-sTN">
+            <objects>
+                <viewController storyboardIdentifier="WebViewController" id="NLv-is-8P1" customClass="WebViewController" customModule="HQ_Solver" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="eT8-KT-udx">
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u7e-At-oMl">
+                                <rect key="frame" x="5" y="5" width="153" height="260"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h2c-rm-nEx">
+                                <rect key="frame" x="322" y="5" width="153" height="260"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vBa-Ug-gbe">
+                                <rect key="frame" x="163" y="5" width="154" height="260"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="u7e-At-oMl" firstAttribute="leading" secondItem="eT8-KT-udx" secondAttribute="leading" constant="5" id="37m-bQ-gLy"/>
+                            <constraint firstItem="u7e-At-oMl" firstAttribute="top" secondItem="eT8-KT-udx" secondAttribute="top" constant="5" id="AVY-hC-zOO"/>
+                            <constraint firstItem="vBa-Ug-gbe" firstAttribute="bottom" secondItem="u7e-At-oMl" secondAttribute="bottom" id="Ej5-yY-0pG"/>
+                            <constraint firstItem="h2c-rm-nEx" firstAttribute="bottom" secondItem="u7e-At-oMl" secondAttribute="bottom" id="FWw-M2-0z6"/>
+                            <constraint firstItem="vBa-Ug-gbe" firstAttribute="top" secondItem="u7e-At-oMl" secondAttribute="top" id="IqY-ec-jZb"/>
+                            <constraint firstItem="h2c-rm-nEx" firstAttribute="leading" secondItem="vBa-Ug-gbe" secondAttribute="trailing" constant="5" id="Lpy-6e-fIa"/>
+                            <constraint firstItem="vBa-Ug-gbe" firstAttribute="leading" secondItem="u7e-At-oMl" secondAttribute="trailing" constant="5" id="VMF-ww-NRJ"/>
+                            <constraint firstAttribute="trailing" secondItem="h2c-rm-nEx" secondAttribute="trailing" constant="5" id="aVJ-nC-ikm"/>
+                            <constraint firstAttribute="bottom" secondItem="u7e-At-oMl" secondAttribute="bottom" constant="5" id="cve-LM-7EN"/>
+                            <constraint firstItem="h2c-rm-nEx" firstAttribute="top" secondItem="u7e-At-oMl" secondAttribute="top" id="gd6-r3-9Nj"/>
+                            <constraint firstItem="h2c-rm-nEx" firstAttribute="width" secondItem="u7e-At-oMl" secondAttribute="width" id="nT7-bv-jJP"/>
+                            <constraint firstItem="vBa-Ug-gbe" firstAttribute="width" secondItem="u7e-At-oMl" secondAttribute="width" id="ogz-Fr-b2L"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView1" destination="u7e-At-oMl" id="AcB-Qp-Apa"/>
+                        <outlet property="webView2" destination="vBa-Ug-gbe" id="nqj-dT-ZbV"/>
+                        <outlet property="webView3" destination="h2c-rm-nEx" id="vHz-35-04i"/>
+                    </connections>
+                </viewController>
+                <customObject id="v9L-P3-cEJ" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="656" y="661"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
@@ -711,15 +788,15 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <imageView horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="lbL-vv-pOu">
-                                <rect key="frame" x="10" y="180" width="288" height="150"/>
+                                <rect key="frame" x="10" y="180" width="248" height="150"/>
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="fhI-0y-vIo"/>
                             </imageView>
                             <imageView horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="99d-C2-k9w">
-                                <rect key="frame" x="10" y="20" width="288" height="150"/>
+                                <rect key="frame" x="10" y="20" width="248" height="150"/>
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="4fy-lr-Jj7"/>
                             </imageView>
                             <textField horizontalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="tWk-gF-MjX">
-                                <rect key="frame" x="316" y="10" width="176" height="279"/>
+                                <rect key="frame" x="276" y="180" width="176" height="139"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="172" id="qyE-TT-Sn9"/>
                                 </constraints>
@@ -729,25 +806,54 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Kpb-B4-DPs">
+                                <rect key="frame" x="276" y="20" width="176" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="172" id="0cs-1h-9pL"/>
+                                    <constraint firstAttribute="height" constant="100" id="PIG-PN-vkE"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Stats" id="vJ5-ES-oja">
+                                    <font key="font" metaFont="fixedUser" size="11"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="G7B-Cf-6XU">
+                                <rect key="frame" x="272" y="142" width="184" height="32"/>
+                                <buttonCell key="cell" type="push" title="Do It" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="h8e-AW-irU">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="doItPushed:" target="XfG-lQ-9wD" id="yHM-Pb-TS2"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="99d-C2-k9w" secondAttribute="bottom" constant="20" id="3Df-cA-0ud"/>
-                            <constraint firstItem="tWk-gF-MjX" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="50" id="4lL-nr-fqb"/>
+                            <constraint firstItem="tWk-gF-MjX" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="4lL-nr-fqb"/>
+                            <constraint firstItem="G7B-Cf-6XU" firstAttribute="top" secondItem="tWk-gF-MjX" secondAttribute="bottom" constant="10" id="E9o-vw-jrR"/>
+                            <constraint firstItem="Kpb-B4-DPs" firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" id="GPr-YB-uwV"/>
                             <constraint firstItem="lbL-vv-pOu" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="10" id="Jgy-hS-tdh"/>
                             <constraint firstItem="99d-C2-k9w" firstAttribute="top" secondItem="lbL-vv-pOu" secondAttribute="bottom" constant="10" id="NJv-Ae-VST"/>
-                            <constraint firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" constant="10" id="RXx-5F-DXz"/>
+                            <constraint firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" constant="50" id="RXx-5F-DXz"/>
+                            <constraint firstAttribute="bottom" secondItem="Kpb-B4-DPs" secondAttribute="bottom" constant="20" id="XKl-gy-8dG"/>
                             <constraint firstItem="99d-C2-k9w" firstAttribute="leading" secondItem="lbL-vv-pOu" secondAttribute="leading" id="anB-DI-A4P"/>
                             <constraint firstItem="tWk-gF-MjX" firstAttribute="leading" secondItem="lbL-vv-pOu" secondAttribute="trailing" constant="20" id="c8W-RU-S5b"/>
+                            <constraint firstItem="G7B-Cf-6XU" firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" id="crV-11-OYc"/>
                             <constraint firstItem="99d-C2-k9w" firstAttribute="trailing" secondItem="lbL-vv-pOu" secondAttribute="trailing" id="dRb-z0-8FT"/>
+                            <constraint firstItem="Kpb-B4-DPs" firstAttribute="top" secondItem="G7B-Cf-6XU" secondAttribute="bottom" constant="29" id="iJk-Pd-87w"/>
+                            <constraint firstItem="Kpb-B4-DPs" firstAttribute="leading" secondItem="tWk-gF-MjX" secondAttribute="leading" id="rXp-oY-e9f"/>
                             <constraint firstItem="lbL-vv-pOu" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="9" id="siX-M1-9YR"/>
-                            <constraint firstAttribute="bottom" secondItem="tWk-gF-MjX" secondAttribute="bottom" constant="10" id="wIr-ar-BCq"/>
                             <constraint firstItem="99d-C2-k9w" firstAttribute="height" secondItem="lbL-vv-pOu" secondAttribute="height" id="yEP-cf-5Jh"/>
+                            <constraint firstItem="G7B-Cf-6XU" firstAttribute="leading" secondItem="tWk-gF-MjX" secondAttribute="leading" id="ykj-9G-XNS"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="ocrImageView" destination="99d-C2-k9w" id="awJ-il-VLh"/>
                         <outlet property="ocrResultLabel" destination="tWk-gF-MjX" id="fYs-hh-pxM"/>
                         <outlet property="originalImageView" destination="lbL-vv-pOu" id="1RN-w4-Fhd"/>
+                        <outlet property="statsLabel" destination="Kpb-B4-DPs" id="A2d-sA-PJd"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
