--- a/HQ Solver/Base.lproj/Main.storyboard
+++ b/HQ Solver/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13196"/>
         <plugIn identifier="com.apple.WebKit2IBPlugin" version="13196"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -733,21 +734,21 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u7e-At-oMl">
-                                <rect key="frame" x="5" y="5" width="153" height="260"/>
+                                <rect key="frame" x="5" y="5" width="230" height="260"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
                             <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h2c-rm-nEx">
-                                <rect key="frame" x="322" y="5" width="153" height="260"/>
+                                <rect key="frame" x="360" y="5" width="115" height="260"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
                             <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vBa-Ug-gbe">
-                                <rect key="frame" x="163" y="5" width="154" height="260"/>
+                                <rect key="frame" x="240" y="5" width="115" height="260"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
@@ -765,8 +766,8 @@
                             <constraint firstAttribute="trailing" secondItem="h2c-rm-nEx" secondAttribute="trailing" constant="5" id="aVJ-nC-ikm"/>
                             <constraint firstAttribute="bottom" secondItem="u7e-At-oMl" secondAttribute="bottom" constant="5" id="cve-LM-7EN"/>
                             <constraint firstItem="h2c-rm-nEx" firstAttribute="top" secondItem="u7e-At-oMl" secondAttribute="top" id="gd6-r3-9Nj"/>
-                            <constraint firstItem="h2c-rm-nEx" firstAttribute="width" secondItem="u7e-At-oMl" secondAttribute="width" id="nT7-bv-jJP"/>
-                            <constraint firstItem="vBa-Ug-gbe" firstAttribute="width" secondItem="u7e-At-oMl" secondAttribute="width" id="ogz-Fr-b2L"/>
+                            <constraint firstItem="h2c-rm-nEx" firstAttribute="width" secondItem="u7e-At-oMl" secondAttribute="width" multiplier="0.5" id="nT7-bv-jJP"/>
+                            <constraint firstItem="vBa-Ug-gbe" firstAttribute="width" secondItem="u7e-At-oMl" secondAttribute="width" multiplier="0.5" id="ogz-Fr-b2L"/>
                         </constraints>
                     </view>
                     <connections>
@@ -819,7 +820,7 @@
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="G7B-Cf-6XU">
-                                <rect key="frame" x="272" y="142" width="184" height="32"/>
+                                <rect key="frame" x="272" y="142" width="125" height="32"/>
                                 <buttonCell key="cell" type="push" title="Do It" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="h8e-AW-irU">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -828,22 +829,34 @@
                                     <action selector="doItPushed:" target="XfG-lQ-9wD" id="yHM-Pb-TS2"/>
                                 </connections>
                             </button>
+                            <button horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Twe-fH-iOb">
+                                <rect key="frame" x="390" y="142" width="66" height="32"/>
+                                <buttonCell key="cell" type="push" title="Test" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Tp8-8f-kT9">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="testPushed:" target="XfG-lQ-9wD" id="Cea-xw-O1l"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="99d-C2-k9w" secondAttribute="bottom" constant="20" id="3Df-cA-0ud"/>
                             <constraint firstItem="tWk-gF-MjX" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="4lL-nr-fqb"/>
+                            <constraint firstItem="Twe-fH-iOb" firstAttribute="leading" secondItem="G7B-Cf-6XU" secondAttribute="trailing" constant="5" id="Chm-fG-jeq"/>
                             <constraint firstItem="G7B-Cf-6XU" firstAttribute="top" secondItem="tWk-gF-MjX" secondAttribute="bottom" constant="10" id="E9o-vw-jrR"/>
                             <constraint firstItem="Kpb-B4-DPs" firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" id="GPr-YB-uwV"/>
                             <constraint firstItem="lbL-vv-pOu" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="10" id="Jgy-hS-tdh"/>
                             <constraint firstItem="99d-C2-k9w" firstAttribute="top" secondItem="lbL-vv-pOu" secondAttribute="bottom" constant="10" id="NJv-Ae-VST"/>
                             <constraint firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" constant="50" id="RXx-5F-DXz"/>
+                            <constraint firstItem="Twe-fH-iOb" firstAttribute="centerY" secondItem="G7B-Cf-6XU" secondAttribute="centerY" id="U5Y-eG-52d"/>
                             <constraint firstAttribute="bottom" secondItem="Kpb-B4-DPs" secondAttribute="bottom" constant="20" id="XKl-gy-8dG"/>
                             <constraint firstItem="99d-C2-k9w" firstAttribute="leading" secondItem="lbL-vv-pOu" secondAttribute="leading" id="anB-DI-A4P"/>
                             <constraint firstItem="tWk-gF-MjX" firstAttribute="leading" secondItem="lbL-vv-pOu" secondAttribute="trailing" constant="20" id="c8W-RU-S5b"/>
-                            <constraint firstItem="G7B-Cf-6XU" firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" id="crV-11-OYc"/>
                             <constraint firstItem="99d-C2-k9w" firstAttribute="trailing" secondItem="lbL-vv-pOu" secondAttribute="trailing" id="dRb-z0-8FT"/>
                             <constraint firstItem="Kpb-B4-DPs" firstAttribute="top" secondItem="G7B-Cf-6XU" secondAttribute="bottom" constant="29" id="iJk-Pd-87w"/>
                             <constraint firstItem="Kpb-B4-DPs" firstAttribute="leading" secondItem="tWk-gF-MjX" secondAttribute="leading" id="rXp-oY-e9f"/>
+                            <constraint firstItem="Twe-fH-iOb" firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" id="sfm-M0-alP"/>
                             <constraint firstItem="lbL-vv-pOu" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="9" id="siX-M1-9YR"/>
                             <constraint firstItem="99d-C2-k9w" firstAttribute="height" secondItem="lbL-vv-pOu" secondAttribute="height" id="yEP-cf-5Jh"/>
                             <constraint firstItem="G7B-Cf-6XU" firstAttribute="leading" secondItem="tWk-gF-MjX" secondAttribute="leading" id="ykj-9G-XNS"/>
