Load first link in google results

--- a/HQ Solver/Base.lproj/Main.storyboard
+++ b/HQ Solver/Base.lproj/Main.storyboard
@@ -734,21 +734,28 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u7e-At-oMl">
-                                <rect key="frame" x="5" y="5" width="219" height="260"/>
+                                <rect key="frame" x="5" y="114" width="233" height="151"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
                             <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vBa-Ug-gbe">
-                                <rect key="frame" x="229" y="5" width="219" height="260"/>
+                                <rect key="frame" x="243" y="114" width="232" height="151"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
                             <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h2c-rm-nEx">
-                                <rect key="frame" x="453" y="5" width="22" height="260"/>
+                                <rect key="frame" x="5" y="5" width="233" height="101"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="igP-qe-BgH" userLabel="Web View4">
+                                <rect key="frame" x="243" y="5" width="232" height="101"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
@@ -757,23 +764,28 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="u7e-At-oMl" firstAttribute="leading" secondItem="eT8-KT-udx" secondAttribute="leading" constant="5" id="37m-bQ-gLy"/>
+                            <constraint firstItem="h2c-rm-nEx" firstAttribute="height" secondItem="u7e-At-oMl" secondAttribute="height" multiplier="1:1.5" id="4ut-u3-tCd"/>
+                            <constraint firstItem="h2c-rm-nEx" firstAttribute="trailing" secondItem="u7e-At-oMl" secondAttribute="trailing" id="90a-R9-Vra"/>
                             <constraint firstItem="u7e-At-oMl" firstAttribute="top" secondItem="eT8-KT-udx" secondAttribute="top" constant="5" id="AVY-hC-zOO"/>
                             <constraint firstItem="vBa-Ug-gbe" firstAttribute="bottom" secondItem="u7e-At-oMl" secondAttribute="bottom" id="Ej5-yY-0pG"/>
-                            <constraint firstItem="h2c-rm-nEx" firstAttribute="bottom" secondItem="u7e-At-oMl" secondAttribute="bottom" id="FWw-M2-0z6"/>
                             <constraint firstItem="vBa-Ug-gbe" firstAttribute="top" secondItem="u7e-At-oMl" secondAttribute="top" id="IqY-ec-jZb"/>
-                            <constraint firstItem="h2c-rm-nEx" firstAttribute="leading" secondItem="vBa-Ug-gbe" secondAttribute="trailing" constant="5" id="Lpy-6e-fIa"/>
+                            <constraint firstItem="vBa-Ug-gbe" firstAttribute="width" secondItem="u7e-At-oMl" secondAttribute="width" id="SJk-rp-gq5"/>
                             <constraint firstItem="vBa-Ug-gbe" firstAttribute="leading" secondItem="u7e-At-oMl" secondAttribute="trailing" constant="5" id="VMF-ww-NRJ"/>
-                            <constraint firstAttribute="trailing" secondItem="h2c-rm-nEx" secondAttribute="trailing" constant="5" id="aVJ-nC-ikm"/>
-                            <constraint firstAttribute="bottom" secondItem="u7e-At-oMl" secondAttribute="bottom" constant="5" id="cve-LM-7EN"/>
-                            <constraint firstItem="h2c-rm-nEx" firstAttribute="top" secondItem="u7e-At-oMl" secondAttribute="top" id="gd6-r3-9Nj"/>
-                            <constraint firstItem="h2c-rm-nEx" firstAttribute="width" secondItem="u7e-At-oMl" secondAttribute="width" multiplier="0.1" id="nT7-bv-jJP"/>
-                            <constraint firstItem="vBa-Ug-gbe" firstAttribute="width" secondItem="u7e-At-oMl" secondAttribute="width" id="ogz-Fr-b2L"/>
+                            <constraint firstItem="h2c-rm-nEx" firstAttribute="top" secondItem="u7e-At-oMl" secondAttribute="bottom" constant="8" id="X91-M7-iZW"/>
+                            <constraint firstItem="igP-qe-BgH" firstAttribute="trailing" secondItem="vBa-Ug-gbe" secondAttribute="trailing" id="aOA-3e-1Xl"/>
+                            <constraint firstAttribute="trailing" secondItem="vBa-Ug-gbe" secondAttribute="trailing" constant="5" id="aWB-eF-1lZ"/>
+                            <constraint firstItem="igP-qe-BgH" firstAttribute="leading" secondItem="vBa-Ug-gbe" secondAttribute="leading" id="av1-Zh-2iG"/>
+                            <constraint firstItem="h2c-rm-nEx" firstAttribute="leading" secondItem="u7e-At-oMl" secondAttribute="leading" id="bSL-RF-7ua"/>
+                            <constraint firstAttribute="bottom" secondItem="h2c-rm-nEx" secondAttribute="bottom" constant="5" id="hIg-fK-QhJ"/>
+                            <constraint firstItem="igP-qe-BgH" firstAttribute="bottom" secondItem="h2c-rm-nEx" secondAttribute="bottom" id="jph-4A-M4h"/>
+                            <constraint firstItem="igP-qe-BgH" firstAttribute="top" secondItem="h2c-rm-nEx" secondAttribute="top" id="kH1-Fb-67L"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="webView1" destination="u7e-At-oMl" id="AcB-Qp-Apa"/>
                         <outlet property="webView2" destination="vBa-Ug-gbe" id="nqj-dT-ZbV"/>
                         <outlet property="webView3" destination="h2c-rm-nEx" id="vHz-35-04i"/>
+                        <outlet property="webView4" destination="igP-qe-BgH" id="Xyo-Oy-ivE"/>
                     </connections>
                 </viewController>
                 <customObject id="v9L-P3-cEJ" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
