--- a/HQ Solver/Base.lproj/Main.storyboard
+++ b/HQ Solver/Base.lproj/Main.storyboard
@@ -792,10 +792,10 @@
             </objects>
             <point key="canvasLocation" x="656" y="661"/>
         </scene>
-        <!--Main View Controller-->
+        <!--Trivia View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" userLabel="Main View Controller" customClass="ViewController" customModule="HQ_Solver" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XfG-lQ-9wD" customClass="TriviaViewController" customModule="HQ_Solver" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="500" height="339"/>
                         <autoresizingMask key="autoresizingMask"/>
