--- a/HQ Solver/Base.lproj/Main.storyboard
+++ b/HQ Solver/Base.lproj/Main.storyboard
@@ -800,16 +800,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="500" height="447"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <imageView horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="lbL-vv-pOu">
-                                <rect key="frame" x="10" y="234" width="248" height="204"/>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="fhI-0y-vIo"/>
-                            </imageView>
                             <imageView horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="99d-C2-k9w">
                                 <rect key="frame" x="10" y="20" width="248" height="204"/>
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="4fy-lr-Jj7"/>
                             </imageView>
                             <textField horizontalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="tWk-gF-MjX">
-                                <rect key="frame" x="276" y="410" width="176" height="17"/>
+                                <rect key="frame" x="276" y="392" width="176" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="172" id="qyE-TT-Sn9"/>
                                 </constraints>
@@ -852,7 +848,7 @@
                                 </connections>
                             </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="pzp-7C-06E">
-                                <rect key="frame" x="467" y="410" width="20" height="17"/>
+                                <rect key="frame" x="467" y="390" width="20" height="17"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Q1" id="rEE-8g-sHj">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -870,7 +866,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tlg-B0-ss2">
-                                <rect key="frame" x="278" y="294" width="172" height="25"/>
+                                <rect key="frame" x="278" y="279" width="172" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="9nf-uo-Y8C"/>
                                 </constraints>
@@ -883,7 +879,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rRq-98-Qdn">
-                                <rect key="frame" x="278" y="261" width="172" height="25"/>
+                                <rect key="frame" x="278" y="251" width="172" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="2SV-U5-GL8"/>
                                 </constraints>
@@ -896,7 +892,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rrb-Le-QiU">
-                                <rect key="frame" x="278" y="228" width="172" height="25"/>
+                                <rect key="frame" x="278" y="223" width="172" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="WQ4-pu-Ug2"/>
                                 </constraints>
@@ -908,35 +904,65 @@
                                     <action selector="answerPushed:" target="XfG-lQ-9wD" id="XdG-uy-Hui"/>
                                 </connections>
                             </button>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="L2n-wt-5zK">
+                                <rect key="frame" x="414" y="422" width="53" height="18"/>
+                                <buttonCell key="cell" type="check" title="QBot" bezelStyle="regularSquare" imagePosition="left" inset="2" id="QNf-Ax-86a">
+                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="qBotCheckPushed:" target="XfG-lQ-9wD" id="9Ax-L2-yo5"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="iny-tM-gI8">
+                                <rect key="frame" x="276" y="422" width="93" height="18"/>
+                                <buttonCell key="cell" type="check" title="Screen Cap" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="tc4-QV-af4">
+                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="screenCapCheckPushed:" target="XfG-lQ-9wD" id="qCN-gC-fvD"/>
+                                </connections>
+                            </button>
+                            <imageView horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="lbL-vv-pOu">
+                                <rect key="frame" x="10" y="234" width="248" height="204"/>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="fhI-0y-vIo"/>
+                            </imageView>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="99d-C2-k9w" secondAttribute="bottom" constant="20" id="3Df-cA-0ud"/>
-                            <constraint firstItem="tWk-gF-MjX" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="4lL-nr-fqb"/>
                             <constraint firstItem="tlg-B0-ss2" firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" id="4nT-ck-bjY"/>
+                            <constraint firstItem="pzp-7C-06E" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" symbolic="YES" id="5BT-ww-GX6"/>
+                            <constraint firstAttribute="trailing" secondItem="L2n-wt-5zK" secondAttribute="trailing" constant="35" id="5QF-gF-KBB"/>
                             <constraint firstItem="c6G-MN-hr6" firstAttribute="leading" secondItem="tWk-gF-MjX" secondAttribute="leading" id="5Qo-Gc-bMd"/>
                             <constraint firstItem="rRq-98-Qdn" firstAttribute="leading" secondItem="tWk-gF-MjX" secondAttribute="leading" id="7dE-qt-PdQ"/>
                             <constraint firstItem="c6G-MN-hr6" firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" id="7kf-XM-vWy"/>
-                            <constraint firstItem="c6G-MN-hr6" firstAttribute="top" secondItem="rrb-Le-QiU" secondAttribute="bottom" constant="25" id="9wc-Id-7zV"/>
+                            <constraint firstItem="c6G-MN-hr6" firstAttribute="top" secondItem="rrb-Le-QiU" secondAttribute="bottom" constant="20" id="9wc-Id-7zV"/>
                             <constraint firstItem="tlg-B0-ss2" firstAttribute="leading" secondItem="tWk-gF-MjX" secondAttribute="leading" id="A38-Xz-DV9"/>
-                            <constraint firstItem="rRq-98-Qdn" firstAttribute="top" secondItem="tlg-B0-ss2" secondAttribute="bottom" constant="8" id="CZu-Ix-IN3"/>
+                            <constraint firstItem="rRq-98-Qdn" firstAttribute="top" secondItem="tlg-B0-ss2" secondAttribute="bottom" constant="3" id="CZu-Ix-IN3"/>
                             <constraint firstItem="Twe-fH-iOb" firstAttribute="leading" secondItem="G7B-Cf-6XU" secondAttribute="trailing" constant="5" id="Chm-fG-jeq"/>
+                            <constraint firstItem="tWk-gF-MjX" firstAttribute="top" secondItem="iny-tM-gI8" secondAttribute="bottom" constant="15" id="D3L-kd-b0O"/>
                             <constraint firstAttribute="trailing" secondItem="pzp-7C-06E" secondAttribute="trailing" constant="15" id="IZj-Gl-DzC"/>
                             <constraint firstItem="lbL-vv-pOu" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="10" id="Jgy-hS-tdh"/>
                             <constraint firstItem="99d-C2-k9w" firstAttribute="top" secondItem="lbL-vv-pOu" secondAttribute="bottom" constant="10" id="NJv-Ae-VST"/>
-                            <constraint firstItem="pzp-7C-06E" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="Nku-C5-nno"/>
+                            <constraint firstItem="pzp-7C-06E" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="40" id="Nku-C5-nno"/>
                             <constraint firstItem="G7B-Cf-6XU" firstAttribute="top" secondItem="c6G-MN-hr6" secondAttribute="bottom" constant="12" id="OZl-gT-LcS"/>
+                            <constraint firstItem="iny-tM-gI8" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="9" id="Onl-rK-Q6M"/>
                             <constraint firstItem="rRq-98-Qdn" firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" id="R9e-4w-AMR"/>
                             <constraint firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" constant="50" id="RXx-5F-DXz"/>
                             <constraint firstItem="Twe-fH-iOb" firstAttribute="centerY" secondItem="G7B-Cf-6XU" secondAttribute="centerY" id="U5Y-eG-52d"/>
                             <constraint firstItem="rrb-Le-QiU" firstAttribute="leading" secondItem="tWk-gF-MjX" secondAttribute="leading" id="Uhr-xl-jpn"/>
                             <constraint firstAttribute="bottom" secondItem="Kpb-B4-DPs" secondAttribute="bottom" constant="20" id="XKl-gy-8dG"/>
+                            <constraint firstItem="tWk-gF-MjX" firstAttribute="leading" secondItem="iny-tM-gI8" secondAttribute="leading" id="ZLd-ZU-dPW"/>
                             <constraint firstItem="rrb-Le-QiU" firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" id="Zsa-3P-3hv"/>
                             <constraint firstItem="99d-C2-k9w" firstAttribute="leading" secondItem="lbL-vv-pOu" secondAttribute="leading" id="anB-DI-A4P"/>
                             <constraint firstItem="tWk-gF-MjX" firstAttribute="leading" secondItem="lbL-vv-pOu" secondAttribute="trailing" constant="20" id="c8W-RU-S5b"/>
                             <constraint firstItem="99d-C2-k9w" firstAttribute="trailing" secondItem="lbL-vv-pOu" secondAttribute="trailing" id="dRb-z0-8FT"/>
-                            <constraint firstItem="rrb-Le-QiU" firstAttribute="top" secondItem="rRq-98-Qdn" secondAttribute="bottom" constant="8" id="hWN-gi-fuZ"/>
+                            <constraint firstItem="L2n-wt-5zK" firstAttribute="centerY" secondItem="iny-tM-gI8" secondAttribute="centerY" id="eaf-ca-cwS"/>
+                            <constraint firstItem="rrb-Le-QiU" firstAttribute="top" secondItem="rRq-98-Qdn" secondAttribute="bottom" constant="3" id="hWN-gi-fuZ"/>
                             <constraint firstItem="Kpb-B4-DPs" firstAttribute="top" secondItem="G7B-Cf-6XU" secondAttribute="bottom" constant="29" id="iJk-Pd-87w"/>
                             <constraint firstItem="Kpb-B4-DPs" firstAttribute="leading" secondItem="tWk-gF-MjX" secondAttribute="leading" id="rXp-oY-e9f"/>
+                            <constraint firstItem="L2n-wt-5zK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iny-tM-gI8" secondAttribute="trailing" constant="8" symbolic="YES" id="s0n-Tw-OI8"/>
                             <constraint firstAttribute="trailing" secondItem="Kpb-B4-DPs" secondAttribute="trailing" constant="10" id="sUy-wc-Smx"/>
                             <constraint firstItem="Twe-fH-iOb" firstAttribute="trailing" secondItem="tWk-gF-MjX" secondAttribute="trailing" id="sfm-M0-alP"/>
                             <constraint firstItem="lbL-vv-pOu" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="9" id="siX-M1-9YR"/>
